--- a/package.json
+++ b/package.json
@@ -17,7 +17,13 @@
   },
   "homepage": "https://github.com/Praveen880890/voting_platform#readme",
   "dependencies": {
+    "eslint": "^8.31.0",
+    "husky": "^8.0.3",
+    "passport": "^0.6.0",
     "pg": "^8.8.0",
-    "pg-hstore": "^2.3.4"
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.28.0",
+    "sequelize-cli": "^6.5.2",
+    "tiny-csrf": "^1.1.3"
   }
 }
