--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "connect-ensure-login": "^0.1.1",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.6",
+    "csrf": "^3.1.0",
     "ejs": "^3.1.8",
     "eslint": "^8.31.0",
     "express": "^4.18.2",
