--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/Praveen880890/voting_platform#readme",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "cheerio": "^1.0.0-rc.12",
     "connect-ensure-login": "^0.1.1",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.6",
@@ -31,13 +32,17 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "husky": "^8.0.3",
+    "jest": "^29.3.1",
+    "lint-staged": "^13.1.0",
     "nodemon": "^2.0.20",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
+    "prettier": "^2.8.2",
     "sequelize": "^6.28.0",
-    "sequelize-cli": "^6.5.2"
+    "sequelize-cli": "^6.5.2",
+    "supertest": "^6.3.3"
   },
   "devDependencies": {
     "tiny-csrf": "^1.1.3"
